ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

AM_CPPFLAGS =
AM_CXXFLAGS = -std=c++14 -Wno-deprecated -Wno-pointer-arith
AM_LDFLAGS = 

bin_PROGRAMS = dvdpacking

dvdpacking_CPPFLAGS = $(AM_CPPFLAGS)
dvdpacking_CXXFLAGS = $(AM_CXXFLAGS)
dvdpacking_LDFLAGS = $(AM_LDFLAGS)
dvdpacking_SOURCES = \
	Bin.cc \
	Item.cc \
	Packer.cc \
	dvdpacking.cc
